[gd_scene load_steps=6 format=3 uid="uid://defwdv7okradj"]

[ext_resource type="Script" uid="uid://cleqdpco8wukv" path="res://scripts/bullet.gd" id="1_mkf8s"]
[ext_resource type="AudioStream" uid="uid://chq1vnxukcabp" path="res://assets/audio/gunshot-352466.mp3" id="2_y25gk"]
[ext_resource type="AudioStream" uid="uid://c6gc4mn8eodv" path="res://assets/audio/explosion-312361.mp3" id="3_l5glv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_h1aey"]
radius = 0.3
height = 1.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mkf8s"]
radius = 0.3
height = 1.0

[node name="Bullet" type="Area3D" groups=["player_projectile"]]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_mkf8s")
speed = null
damage = null

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_h1aey")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0)
mesh = SubResource("CapsuleMesh_mkf8s")

[node name="FireSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_y25gk")

[node name="ExplosionSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_l5glv")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
